@@ -150,6 +150,28 @@ GenericSpan.prototype.addLabels = function (labels, stringify) {
   return true
 }
 
+// This method is private because the APM agents spec says that (for OTel
+// compat), adding links after span creation should not be allowed.
+// https://github.com/elastic/apm/blob/main/specs/agents/span-links.md
+//
+// To support adding span links for SQS ReceiveMessage and equivalent, the
+// message data isn't known until the *response*, after the span has been
+// created.
+//
+// @param {Array} links - An array of objects with a `context` property that is
+//    a Transaction, Span, or TraceParent instance, or a W3C trace-context
+//    'traceparent' string.
+GenericSpan.prototype._addLinks = function (links) {
+  if (links) {
+    for (let i = 0; i < links.length; i++) {
+      const link = linkFromLinkArg(links[i])
+      if (link) {
+        this._links.push(link)
+      }
+    }
+  }
+}
+
 GenericSpan.prototype.setType = function (type = null, subtype = null, action = null) {
   this.type = type
   this.subtype = subtype
