@@ -1,6 +1,7 @@
 'use strict'
 
 const { URL } = require('url')
+const { MAX_MESSAGES_PROCESSED_FOR_TRACE_CONTEXT } = require('../../../constants')
 
 const OPERATIONS_TO_ACTIONS = {
   deleteMessage: 'delete',
@@ -117,6 +118,49 @@ function getSpanNameFromRequest (request) {
   return name
 }
 
+// Extract span links from up to 1000 messages in this batch.
+// https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-messaging.md#receiving-trace-context
+//
+// A span link is created from a `traceparent` message attribute in a message.
+// `msg.messageAttributes` is of the form:
+//    { <attribute-name>: { DataType: <attr-type>, StringValue: <attr-value>, ... } }
+// For example:
+//    { traceparent: { DataType: 'String', StringValue: 'test-traceparent' } }
+function getSpanLinksFromResponseData (data) {
+  if (!data || !data.Messages || data.Messages.length === 0) {
+    return null
+  }
+  const links = []
+  const limit = Math.min(data.Messages.length, MAX_MESSAGES_PROCESSED_FOR_TRACE_CONTEXT)
+  for (let i = 0; i < limit; i++) {
+    const attrs = data.Messages[i].MessageAttributes
+    if (!attrs) {
+      continue
+    }
+
+    let traceparent
+    const attrNames = Object.keys(attrs)
+    for (let j = 0; j < attrNames.length; j++) {
+      const attrVal = attrs[attrNames[j]]
+      if (!attrVal.DataType === 'String') {
+        continue
+      }
+      const attrNameLc = attrNames[j].toLowerCase()
+      if (attrNameLc === 'traceparent') {
+        traceparent = attrVal.StringValue
+        break
+      } else if (attrNameLc === 'elastic-apm-traceparent') {
+        traceparent = attrVal.StringValue
+        // Don't break here, to allow a subsequent 'traceparent' attr to win.
+      }
+    }
+    if (traceparent) {
+      links.push({ context: traceparent })
+    }
+  }
+  return links
+}
+
 function shouldIgnoreRequest (request, agent) {
   const operation = request && request.operation
   // are we interested in this operation/method call?
@@ -162,10 +206,18 @@ function instrumentationSqs (orig, origArguments, request, AWS, agent, { version
       agent.captureError(response.error)
     }
 
+    const receiveMsgData = request.operation === 'receiveMessage' && response && response.data
+    if (receiveMsgData) {
+      const links = getSpanLinksFromResponseData(receiveMsgData)
+      if (links) {
+        span._addLinks(links)
+      }
+    }
+
     span.end()
 
-    if (request.operation === 'receiveMessage' && response && response.data) {
-      recordMetrics(getQueueNameFromRequest(request), response.data, agent)
+    if (receiveMsgData) {
+      recordMetrics(getQueueNameFromRequest(request), receiveMsgData, agent)
     }
   }
   // Bind onComplete to the span's run context so that `captureError` picks
